exports[`editKoulutusForm > should be able to edit ammatillinen koulutus #0`] =
{
  "ePerusteId": 1,
  "esikatselu": true,
  "johtaaTutkintoon": true,
  "julkinen": true,
  "kielivalinta": [
    "fi"
  ],
  "koulutusKoodiUri": "koulutus_0#1",
  "koulutustyyppi": "amm",
  "metadata": {
    "koulutusalaKoodiUrit": [],
    "koulutustyyppi": "amm",
    "kuvauksenNimi": {},
    "kuvaus": {},
    "lisatiedot": [
      {
        "otsikkoKoodiUri": "koulutuksenlisatiedot_0#1",
        "teksti": {
          "fi": "koulutuksenlisatiedot_0 kuvaus"
        }
      }
    ],
    "opintojenLaajuusKoodiUri": null,
    "osaamisalaKoodiUri": null,
    "tutkinnonOsat": [],
    "tutkintonimikeKoodiUrit": [],
    "tyyppi": "amm"
  },
  "muokkaaja": "1.2.246.562.24.62301161440",
  "nimi": {
    "fi": "koulutus_0"
  },
  "oid": "1.2.3.4.5.6",
  "organisaatioOid": "1.1.1.1.1.1",
  "tarjoajat": [
    "1.1.1.1.1.1",
    "1.2.1.1.1.1"
  ],
  "teemakuva": null,
  "tila": "tallennettu"
};

exports[`editKoulutusForm > should be able to edit korkeakoulu koulutus #0`] =
{
  "ePerusteId": null,
  "esikatselu": true,
  "johtaaTutkintoon": true,
  "julkinen": true,
  "kielivalinta": [
    "fi"
  ],
  "koulutusKoodiUri": "koulutus_0#1",
  "koulutustyyppi": "yo",
  "metadata": {
    "koulutusalaKoodiUrit": [
      "kansallinenkoulutusluokitus2016koulutusalataso2_1#1"
    ],
    "koulutustyyppi": "yo",
    "kuvauksenNimi": {
      "fi": "Fi kuvauksen nimi"
    },
    "kuvaus": {
      "fi": "Fi kuvaus"
    },
    "lisatiedot": [
      {
        "otsikkoKoodiUri": "koulutuksenlisatiedot_0#1",
        "teksti": {
          "fi": "koulutuksenlisatiedot_0 kuvaus"
        }
      }
    ],
    "opintojenLaajuusKoodiUri": "opintojenlaajuus_1#1",
    "osaamisalaKoodiUri": null,
    "tutkinnonOsat": [],
    "tutkintonimikeKoodiUrit": [
      "tutkintonimikekk_1#1",
      "tutkintonimikekk_2#1"
    ],
    "tyyppi": "yo"
  },
  "muokkaaja": "1.2.246.562.24.62301161440",
  "nimi": {
    "fi": "koulutus_0"
  },
  "oid": "1.2.3.4.5.6",
  "organisaatioOid": "1.1.1.1.1.1",
  "tarjoajat": [
    "1.1.1.1.1.1",
    "1.2.1.1.1.1"
  ],
  "teemakuva": null,
  "tila": "tallennettu"
};

exports[`editKoulutusForm > should be able to edit lukiokoulutus #0`] =
{
  "ePerusteId": null,
  "esikatselu": true,
  "johtaaTutkintoon": true,
  "julkinen": true,
  "kielivalinta": [
    "fi"
  ],
  "koulutusKoodiUri": "koulutus_0#1",
  "koulutustyyppi": "lk",
  "metadata": {
    "koulutusalaKoodiUrit": [],
    "koulutustyyppi": "lk",
    "kuvauksenNimi": {},
    "kuvaus": {},
    "lisatiedot": [
      {
        "otsikkoKoodiUri": "koulutuksenlisatiedot_0#1",
        "teksti": {
          "fi": "koulutuksenlisatiedot_0 kuvaus"
        }
      }
    ],
    "opintojenLaajuusKoodiUri": null,
    "osaamisalaKoodiUri": null,
    "tutkinnonOsat": [],
    "tutkintonimikeKoodiUrit": [],
    "tyyppi": "lk"
  },
  "muokkaaja": "1.2.246.562.24.62301161440",
  "nimi": {
    "fi": "koulutus_0"
  },
  "oid": "1.2.3.4.5.6",
  "organisaatioOid": "1.1.1.1.1.1",
  "tarjoajat": [
    "1.1.1.1.1.1",
    "1.2.1.1.1.1"
  ],
  "teemakuva": null,
  "tila": "tallennettu"
};
